--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,8 +1,15 @@
-name: Elixir Unit Tester
+
+#-------------------------------
+# My Elixir Unit Tester v1 
+#
+# Copyleft (c) by Don Massa 2021.
+#-------------------------------
+name: Elixir-Unit-Tester
 on:
   push:
     branches: 
       - main 
+      - master
 jobs:
   my_testing:
     runs-on: ubuntu-latest
@@ -22,9 +29,12 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    
     - name: Run tests
       run: mix test
-    - name: Unit Test Ausfuehren
-      run : cd hamming
+    
+    - name: In ordner accumulate wechseln
+      run : cd accumulate
+    
     - name: Enter Directory  
       run : mix test
