--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -34,4 +34,9 @@ jobs:
     
     - name: Run tests
       run: mix test
+      working-directory: ${{env.working-directory}}
+    - name: accumulate directory
+      run: |
+        mix test
+      working-directory: ${{env.working-directory}}
     
