--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -18,11 +18,11 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: hamming directory
-      run: mix test
+      run: ls
       working-directory: ${{env.working-directory}}
     - name: accumulate directory
       run: |
-        mix test
+        ls
       working-directory: ${{env.working-directory}}
     
     - uses: actions/checkout@v2
