--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Run tests
       run: mix test
       
-    - name: zeige mir den Inhalt vom Verzeichnis
-      run: ls -la
+    - name: Accumulate Aufgabe testen
+      run: mix test
       
