--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -35,9 +35,7 @@ jobs:
     - name: Install dependencies
       run: mix deps.get
     
-    - name: Run tests
+    - name: Run tests on accumulate exercise 
       run: mix test
       
-    - name: Accumulate Aufgabe testen
-      run: mix test
       
