--- a/.github/workflows/elixir_v2.yaml
+++ b/.github/workflows/elixir_v2.yaml
@@ -1,1 +1,39 @@
+#-------------------------------
+# My Elixir Unit Tester v1 
+#
+# Copyleft (c) by Don Massa 2021.
+#-------------------------------
+name: Elixir-Unit-Tester
+on:
+  push:
+    branches: 
+      - main 
+      - master
+defaults:
+  run:
+    working-directory: ./accumulate
+jobs:
+  my_testing:
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./accumulate
 
+    steps:
+    
+    - uses: actions/checkout@v2
+    - name: Set up Elixir
+      uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
+      with:
+        elixir-version: '1.10.3' # Define the elixir version [required]
+        otp-version: '22.3' # Define the OTP version [required]
+    - name: Restore dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+    - name: Install dependencies
+      run: mix deps.get
+    
+    - name: Run tests on accumulate exercise 
+      run: mix test
